codegen/tests/failures/par_mut_world.stderr
error: custom attribute panicked
 --> $DIR/par_mut_world.rs:6:1
  |
6 | #[system(par_for_each)]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: par_for_each systems cannot accept mutable world references
